docs(api): configure l5-swagger base info
docs(api): configure l5-swagger base info
